# dateutils-python

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md  dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  main.yml  publish.yml  release.yml
dateutils/: __init__.py  _awareness.py  dateutils.py  parsing.py  timezones.py
docs/: RELEASE_PROCESS.md
requirements/: test.txt
scripts/: extract_release_notes.py  smoke_test_installed_package.py  update_changelog.py  validate_docs.py  validate_release_tag.py
tests/: test_dateutils.py  test_parsing.py  test_timezones.py  test_update_changelog.py  test_validate_docs.py  test_validate_release_tag.py
