[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dateutils-python"
version = "0.1.0"
description = "Comprehensive date and time utilities for Python"
readme = "README.md"
authors = [
    {name = "Chet Mancini", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    # No external dependencies beyond standard library
]

[project.urls]
"Homepage" = "https://github.com/chetmancini/dateutils-python"
"Bug Tracker" = "https://github.com/chetmancini/dateutils-python/issues"
"Documentation" = "https://github.com/chetmancini/dateutils-python#readme"
"Source Code" = "https://github.com/chetmancini/dateutils-python"

[tool.setuptools]
packages = ["dateutils"]
package-data = {"dateutils" = ["py.typed"]}

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "types-setuptools>=69.2.0.20240317",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=dateutils --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["dateutils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 120


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",
]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
