[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dateutils-python"
version = "0.5.6"
description = "A comprehensive Python library for date and time manipulation, parsing, formatting, and calculations. Provides intuitive interfaces for common date operations and timezone handling."
readme = "README.md"
authors = [
    {name = "Chet Mancini", email = "chetmancini@gmail.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = ["date", "time", "datetime", "utilities", "timezone", "parsing", "formatting"]
requires-python = ">=3.10"
dependencies = [
    # No external dependencies beyond standard library
]

[project.urls]
Homepage = "https://github.com/chetmancini/dateutils-python"
"Bug Tracker" = "https://github.com/chetmancini/dateutils-python/issues"
Documentation = "https://github.com/chetmancini/dateutils-python#readme"
"Source Code" = "https://github.com/chetmancini/dateutils-python"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.16",
    "build>=1.4.0",
    "pre-commit>=4.5.1",
    "bump2version>=1.0.1",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=dateutils --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["dateutils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length violations
    "PLR0913", # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",
    "PLC0415",  # Allow imports inside test functions for isolation
    "RUF043",   # Allow regex metacharacters in pytest.raises match patterns
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
packages = ["dateutils"]
package-data = {"dateutils" = ["py.typed"]}

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Strict type checking (equivalent to mypy strict settings)
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.src]
include = ["dateutils", "tests"]
exclude = [
    ".git",
    ".hg",
    ".ty_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]
